tests/ui/unique_ptr_twice.stderr
error[E0119]: conflicting implementations of trait `cxx::private::UniquePtrTarget` for type `here::C`:
  --> $DIR/unique_ptr_twice.rs:10:1
   |
1  | #[cxx::bridge]
   | -------------- first implementation here
...
10 | #[cxx::bridge]
   | ^^^^^^^^^^^^^^ conflicting implementation for `here::C`
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
